# VINA-SLAM

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  ReadMe.md  package.xml
config/: HILTI.yaml  compus_elevator.yaml  mid360.yaml  outdoor_fly.yaml  robosense.yaml  velodyne.yaml
docs/: VNCLio_formulation.md
include/vina_slam/: VINASlam.hpp  ekf_imu.hpp  lidar_pointcloud_decoder.hpp  preintegration.hpp  tools.hpp  voxel_map.hpp
include/vina_slam/core/: common.hpp  config.hpp  constants.hpp  math.hpp  point_utils.hpp  sensor_context.hpp  types.hpp
include/vina_slam/estimation/: imu_ekf.hpp  imu_preintegration.hpp  sliding_window_manager.hpp  state_estimator.hpp
include/vina_slam/mapping/: factors.hpp  keyframe.hpp  octree.hpp  optimizers.hpp  plane.hpp  slide_window.hpp  voxel_map.hpp  voxel_map_manager.hpp
include/vina_slam/pipeline/: initialization.hpp  local_mapping.hpp  odometry.hpp
include/vina_slam/platform/ros2/: io.hpp  node.hpp  publishers.hpp  subscribers.hpp
include/vina_slam/sensor/: imu_buffer.hpp  lidar_decoder.hpp  sync.hpp
launch/: start.launch.py
rviz_cfg/: rviz_cfg.rviz
src/: VINASlam.cpp  main.cpp  voxel_map.cpp
src/core/: point_utils.cpp  sensor_context.cpp  types.cpp
src/estimation/: imu_ekf.cpp  imu_preintegration.cpp  sliding_window_manager.cpp  state_estimator.cpp
src/mapping/: factors.cpp  octree.cpp  optimizers.cpp  voxel_map.cpp  voxel_map_manager.cpp
src/pipeline/: initialization.cpp  local_mapping.cpp  odometry.cpp
src/platform/ros2/: io.cpp  node.cpp  publishers.cpp  subscribers.cpp
src/sensor/: lidar_decoder.cpp  lidar_pointcloud_decoder.cpp  sync.cpp
